gcp/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: k8-test
    networking.gke.io/managed-certificates: k8-cert-2
    networking.gke.io/v1beta1.FrontendConfig: k8-test
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: k8-test-aar
            port:
              number: 8080
      - path: /aar
        pathType: ImplementationSpecific
        backend:
          service:
            name: k8-test-aar
            port:
              number: 8080
      - path: /test
        pathType: ImplementationSpecific
        backend:
          service:
            name: k8-test-test
            port:
              number: 8080
